# server/presenter/common.go
@@ -1,0 +1,8 @@
+package presenter
+
+// ResponseHTTP represents response body of this API
+type ResponseHTTP struct {
+	Success bool        `json:"success"`
+	Data    interface{} `json:"data"`
+	Message string      `json:"message"`
+}
